--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -86,9 +86,10 @@ div.dropdown-menu.show {
   display: flex;
   font-family: "Caveat", cursive;
   font-family: "Fuzzy Bubbles", cursive;
-  max-width: 100%;
+  max-width: 90%;
   border: solid 10px var(--dark-blue);
-  border-radius: 20px;
+  border-radius: 50px;
+  
 }
 
 .aboutCard {
@@ -98,6 +99,8 @@ div.dropdown-menu.show {
   background-color: var(--light-blue);
   max-width: 100%; /* Adjust this value as needed */
   margin: 0 auto;
+  padding: 20px 50px;
+  border-radius: 40px;
 }
 
 .linkToProject {
@@ -301,7 +304,7 @@ div.dropdown-menu.show {
   height: 100%;
   object-fit: 100%;
   overflow: hidden;
-  border-radius: 10px;
+  
 }
 
 .cardImg {
@@ -309,7 +312,6 @@ div.dropdown-menu.show {
   height: 100%;
   object-fit: 100%;
   overflow: hidden;
-  border-radius: 10px;
 }
 
 .cardBodyText {
