--- a/src/assets/styles/pages.css
+++ b/src/assets/styles/pages.css
@@ -88,75 +88,56 @@
 
 /* Blog Page Styles */
 
-.deprecated {
-  color: var(--dark-blue);
-  font-weight: bold;
-}
-.deprecatedButton {
-  border: solid var(--dark-blue) 5px;
-  border-radius: 20px;
-  background-color: var(--dark-blue);
-  color: var(--light-blue);
-}
-
-.deprecatedImage {
-border-radius: 20px;
-}
-
-.blogPageTitle,
-.cvPageTitle {
-  color: var(--light-blue);
-}
-
-.blogText {
-  color: var(--light-blue);
-  padding: 10px;
-  font-size: 1.5em;
+.blogPageTitle {
+  padding: 20px;
+  color: var(--dark-blue) !important;
 }
 
 .blogCard {
+  width: 80%;
+  margin: auto;
+  padding: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
+.blogPageLayout {
+  padding: 20px;
+  max-width: 800px;
+}
+
+.blogReadMoreButton {
+  background-color: var(--dark-blue) !important;
+  border: solid 10px var(--dark-blue) !important;
+}
+
+.custom-modal-dialog {
+  max-width: 1000px !important; /* Adjust the width as per your requirement */
+}
+
+.modalImages {
+  width: 40%;
+  display: flex;
+  margin: auto;
+}
+
 .backgroundBlogPicture {
-  background-image: url(../../assets/images/maldives.jpeg);
-  width: 100%;
+  background-image: url(../images/maldives.jpeg);
+  width: 98%;
+  margin: auto;
+  height: 300px;
   background-position: center center;
   padding-bottom: 100px;
   background-size: cover;
   background-repeat: no-repeat;
-  border: var(--light-blue) solid 20px;
+  border: solid 10px var(--dark-blue);
   border-radius: 40px;
 }
 
-.pictureSection {
-  padding: 50px;
-}
-
-.blogLink {
-  color: var(--navy-blue);
-  background-color: var(--light-blue);
-  border: var(--dark-blue) solid 10px;
-  border-radius: 10px;
-  padding: 1rem;
-}
-
-.blogPageButton {
-  display: flex;
-  color: #caf0f8 !important;
-  background-color: var(--dark-blue) !important;
-  border: var(--dark-blue) solid 10px !important;
-  border-radius: 20px !important;
-  font-family: "Caveat", cursive;
-  font-family: "Fuzzy Bubbles", cursive !important;
-}
-
-.blogPageButton:hover {
-  background-color: var(--light-blue) !important;
-  border: var(--light-blue) solid 10px !important;
-  color: var(--dark-blue) !important;
+.blogText {
+  font-size: 2em;
+  padding: 20px;
 }
 
 /* Contact Page */
