--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -86,10 +86,9 @@ div.dropdown-menu.show {
   display: flex;
   font-family: "Caveat", cursive;
   font-family: "Fuzzy Bubbles", cursive;
-  max-width: 90%;
+  max-width: 80%;
   border: solid 10px var(--dark-blue);
   border-radius: 50px;
-  
 }
 
 .aboutCard {
@@ -97,12 +96,10 @@ div.dropdown-menu.show {
   font-size: 100%;
   text-align: center;
   background-color: var(--light-blue);
-  max-width: 100%; /* Adjust this value as needed */
-  margin: 0 auto;
-  padding: 20px 30px;
+  padding: 10px 30px;
   border-radius: 40px;
 }
-
+/* Project Buttons on Home Page */
 .linkToProject {
   background-color: var(--dark-blue) !important;
   color: var(--light-blue) !important;
@@ -115,7 +112,34 @@ div.dropdown-menu.show {
   color: var(--dark-blue) !important;
   border: solid 10px var(--aqua-blue) !important;
 }
+/* Credentials Button on Home Page */
+.linkToCredentials {
+  background-color: var(--dark-blue) !important;
+  color: var(--light-blue) !important;
+  border: solid 10px var(--dark-blue) !important;
+  margin: 10px;
+}
 
+.linkToCredentials:hover {
+  background-color: var(--aqua-blue) !important;
+  color: var(--dark-blue) !important;
+  border: solid 10px var(--aqua-blue) !important;
+}
+
+/* Blog Button on Home Page */
+
+.linkToBlog {
+  background-color: var(--dark-blue) !important;
+  color: var(--light-blue) !important;
+  border: solid 10px var(--dark-blue) !important;
+  margin: 10px;
+}
+
+.linkToBlog:hover {
+  background-color: var(--aqua-blue) !important;
+  color: var(--dark-blue) !important;
+  border: solid 10px var(--aqua-blue) !important;
+}
 .sectionHeader {
   color: var(--dark-blue);
 }
@@ -137,59 +161,80 @@ div.dropdown-menu.show {
   text-align: left; /* Align the content to the left */
 }
 
-
 /* Blog Component */
 
-.blogCardContainer {
-  max-width: 450px;
-  display: flex;
-  justify-content: center;
-  border: 1rem solid var(--dark-blue) !important;
+.blogPageContainer {
+  border: 1rem solid var(--dark-blue);
   margin: auto;
-  background-color: var(--light-blue) !important;
-  border-radius: 50px;
+  background-color: var(--dark-blue);
+  border-radius: 20px;
 }
 
-.blogImage {
-  height: 350px;
+.blogPageLayout {
+  padding: 20px;
+  max-width: 100%;
+  margin: auto;
+}
+
+.blogCard {
+  width: 100%;
+  margin: auto;
+  display: flex;
 }
 
 .blogTitle,
-.blogDate {
-  height: 100px;
-  color: var(--navy-blue);
-}
-
-.blogTitle {
-  font-size: 1.5em;
-}
-.blogDate {
+.blogDate,
+.blogText {
+  color: var(--dark-blue) !important;
+  padding: 10px;
   font-size: 1em;
+  font-family: "Caveat", cursive;
+  font-family: "Fuzzy Bubbles", cursive;
 }
 
-.blogButton {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  font-size: 100%;
-  width: 40%;
-  border-radius: 20px;
+.blogReadMoreButton {
   background-color: var(--dark-blue) !important;
-  border: var(--dark-blue) solid 10px !important;
+  border: solid 5px var(--dark-blue) !important;
 }
 
-.blogButton:hover {
-  background-color: var(--navy-blue) !important;
-  border: var(--navy-blue) solid 10px !important;
+/* Modal */
+.custom-modal-dialog {
+  max-width: 1000px !important;
 }
 
-.blogLinkText {
-  color: var(--light-blue);
+.modalImages {
+  width: 40%;
+  display: flex;
+  margin: auto;
+}
+
+.modal-header {
+  background-color: var(--dark-blue);
+}
+
+.modal-title {
+  color: var(--light-blue) !important;
+  padding: 10px;
   font-size: 1em;
-  text-decoration: none;
+  font-family: "Caveat", cursive;
+  font-family: "Fuzzy Bubbles", cursive;
+  margin: auto;
 }
+
+.modal-body {
+  color: var(--dark-blue);
+}
+
+.modal-footer {
+  background-color: var(--dark-blue) !important;
+}
+
+.modal-footer .btn {
+  background-color: var(--aqua-blue);
+  color: var(--dark-blue);
+  border: var(--dark-blue) solid 1px;
+}
+
 
 /* Contact Me Component */
 
@@ -304,7 +349,6 @@ div.dropdown-menu.show {
   height: 100%;
   object-fit: 100%;
   overflow: hidden;
-  
 }
 
 .cardImg {
