--- a/src/assets/styles/pages.css
+++ b/src/assets/styles/pages.css
@@ -19,15 +19,59 @@
   max-width: 100%;
 }
 
-.homePageTitle {
-  color: var(--dark-blue) !important;
+/* Credentials Page */
+
+.pageBackgroundCredentials {
+  background-image: url(../images/vecteezy_the-wild-ocean-view_6177787.jpg);
+  min-height: 100vh;
+  text-align: center;
+  max-width: 100%;
+  padding: 10px;
+}
+
+.profilePic {
+  width: 50%;
+  border-radius: 50px;
+  border: var(--dark-blue) solid 5px;
+  justify-content: center;
+}
+
+.credentialsRow {
+  background-color: var(--navy-blue);
+  margin: 10px 20px !important;
+  border-radius: 10px;
+}
+
+.credentialsCard1 {
+  background-color: var(--navy-blue) !important;
+  color: var(--light-blue) !important;
   text-align: center;
 }
 
-.homeSubtitle {
-  text-align: center !important;
-  color: var(--dark-blue) !important;
+.credentialsCard {
+  background-color: var(--navy-blue) !important;
+  color: var(--light-blue) !important;
+  text-align: left;
 }
+
+.careerTimelineDiv {
+  background-color: var(--navy-blue);
+
+}
+
+.careerTimelineImage {
+  width: 100%; 
+  border-radius: 20px !important;
+}
+
+
+
+.pageTitle {
+  color: var(--dark-blue) !important;
+  text-align: center;
+  padding: 20px;
+}
+
 
 .aboutMePosition {
   display: flex;
@@ -35,14 +79,6 @@
   justify-content: center;
   width: 98%;
   padding: 10px;
-}
-
-.profilePic {
-  width: 15%;
-  height: 25%;
-  border-radius: 50px;
-  border: var(--dark-blue) solid 10px;
-  margin-top: 20px;
 }
 
 /* Project Gallery Page */
@@ -90,43 +126,10 @@
 
 .blogPageTitle {
   padding: 20px;
-  color: var(--dark-blue) !important;
+  color: var(--dark-blue);
 }
 
-.blogCard {
-  width: 100%;
-  margin: auto;
-  padding: 10px;
-  display: flex;
-  
-}
-
-.blogPageLayout {
-  padding: 20px;
-  max-width: 800px;
-  margin: auto;
-}
-
-.blogReadMoreButton {
-  background-color: var(--dark-blue) !important;
-  border: solid 10px var(--dark-blue) !important;
-}
-
-.custom-modal-dialog {
-  max-width: 1000px !important; /* Adjust the width as per your requirement */
-}
-
-.modalImages {
-  width: 40%;
-  display: flex;
-  margin: auto;
-}
-
-
-.blogText {
-  font-size: 2em;
-  padding: 20px;
-}
+/*  */
 
 /* Contact Page */
 
