New blog post added

--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -154,6 +154,9 @@ div.dropdown-menu.show {
 
 /* Blog Component */
 
+.coming-soon {
+  background-color: red;
+}
 .blogPageContainer {
   border: 1rem solid var(--dark-blue);
   margin: 20px;
